# plons

./: .gitignore  AddTau.py  ArchimedianSpiral.py  CMF_meanRho.py  CMF_meanRho_pipeline.py  ConversionFactors_cgs.py  GeometricalFunctions.py  LoadDataPHANTOM.py  LoadDump.py  LoadSetup.py  LoadSink.py  OrbitalEvolution.py  PhysicalQuantities.py  Profiles1D.py  README.md  README.txt  RadialStructurePlots1D.py  RadialStructurePlots1DJolien.py  RhoRradialFit.py  SlicePlots2D.py  SlicePlots_pipeline.py  SmoothingKernelScript.py  TerminalVelocity.py  Tools.py  Tubes.py  animationSlicePlots.py  magritte_env.yaml  main.py  mainChoseModels.py  merge1DPlotsDion.py  orbitalEvolution_pipeline.py  profile_1D_spherical_model.py  pyproject.toml  radialStructure_pipeline.py  readthedocs.yaml  smoothingKernelScript.py  test.py  userSettings.py  userSettings.txt
.github/workflows/: build-and-test.yaml  upload-to-anaconda.yaml  upload-to-pypi.yaml
conda/: build.sh  meta.yaml
docs/: build_docs.sh
docs/src/: conf.py  index.rst  requirements.txt
old/: LoadDumpSplash.py
scripts/: main.py  mainWAql.py  main_SlicePlots.py  profile_1D_spherical_model.py  userSettings.py
src/plons/: .OrbitalEvolution.py.kate-swp  AccrDisk.py  AccrDisks_calcHRM.py  AccrDisks_plotsHRM.py  AccrDisks_vrvrPlots.py  ArchimedianSpiral.py  CMF_meanRho.py  ConversionFactors_cgs.py  GeometricalFunctions.py  LoadData.py  LoadDataPHANTOM.py  LoadDump.py  LoadSetup.py  LoadSink.py  OrbitalEvolution.py  OrbitalEvolutionWAql.py  PhysicalQuantities.py  Plotting.py  Profiles1D.py  RadialStructurePlots1D.py  RhoRradialFit.py  SlicePlots2D.py  SmoothingKernelScript.py  SmoothingKernelScriptV2_Mike_ToMuchMem.py  TerminalVelocity.py  Tools.py  Tubes.py  Wind accretion formula  __init__.py  main.py  mainWAql.py  (+6 more)
tests/: test_SmoothingKernelScript.py
(+41 files in other folders)
